Compiled and run in Visual Studio 2013

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,7 @@
 /*.bak
 /*.exe
 /*.o
+/Debug
+/Erratum-Geometry-of-discrete-quantum-computing/Debug
+/Erratum-Geometry-of-discrete-quantum-computing.v12.suo
+/Erratum-Geometry-of-discrete-quantum-computing.opensdf
