http://iopscience.iop.org/article/10.1088/1751-8113/49/3/039501

--- a/.gitignore
+++ b/.gitignore
@@ -13,4 +13,4 @@
 /Erratum-Geometry-of-discrete-quantum-computing/Debug
 /Erratum-Geometry-of-discrete-quantum-computing.v12.suo
 /Erratum-Geometry-of-discrete-quantum-computing.opensdf
-/*.pdf
+/correction.pdf
